force-app/main/default/objects/Policy_History__c/fields/Policy_History_Changes__c.field-meta.xml
<CustomField>
    <fullName>Policy_History_Changes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy History Changes</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Policy_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>